updated search server function